--- a/nav_bar/index.html
+++ b/nav_bar/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Nav bar</title>
+    <script src="https://kit.fontawesome.com/dc54b43422.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <i class="fa-solid fa-tree"></i>
+            <a href="">DreamCoding</a>
+        </div>
+
+        <ul class="navbar__menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Weddings</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Bookings</a></li>
+
+        </ul>
+
+        <ul class="navbar__links">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-square-instagram"></i> 
+        </ul>
+
+    </nav>
 </body>
 </html>
