feat: 기본 css 적용

--- a/nav_bar/index.html
+++ b/nav_bar/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Nav bar</title>
     <script src="https://kit.fontawesome.com/dc54b43422.js" crossorigin="anonymous"></script>
 </head>
@@ -23,9 +24,9 @@
 
         </ul>
 
-        <ul class="navbar__links">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-square-instagram"></i> 
+        <ul class="navbar__icons">
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><i class="fa-brands fa-square-instagram"></i></li>
         </ul>
 
     </nav>
