feat: toggle button 만들기

--- a/nav_bar/index.html
+++ b/nav_bar/index.html
@@ -29,6 +29,10 @@
             <li><i class="fa-brands fa-square-instagram"></i></li>
         </ul>
 
+        <a href="#" class="navbar__toogleBtn">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+
     </nav>
 </body>
 </html>
