feat: 클릭이벤트 처리 with js

--- a/nav_bar/index.html
+++ b/nav_bar/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Nav bar</title>
     <script src="https://kit.fontawesome.com/dc54b43422.js" crossorigin="anonymous"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
